Write similarity diagram; edit operator section

--- a/ons-edo/main.tex
+++ b/ons-edo/main.tex
@@ -6,6 +6,7 @@
 
 \usepackage{algorithm2e}
 \usepackage{animate}
+\usepackage{anyfontsize}
 \usepackage[backend=bibtex, style=numeric]{biblatex}
     \addbibresource{references}
 \usepackage{booktabs}
@@ -25,6 +26,7 @@
 
 
 % TikZ styles, commands and settings
+\definecolor{cyan}{RGB}{0, 164, 216}
 \definecolor{magenta}{RGB}{226, 62, 138}
 \tikzstyle{every picture} += [remember picture]
 \tikzstyle{na} = [baseline=-.5ex]
@@ -55,6 +57,13 @@
     }
 }
 
+\newcommand{\hammerpage}{%
+    \frame{%
+        \centering
+        \includegraphics[width=.2\textwidth]{img/nut.png}\hspace{.1\textwidth}%
+        \includegraphics[width=.5\textwidth]{img/hammer.png}
+    }
+}
 
 \title{%
     Evolutionary dataset optimisation:
@@ -76,328 +85,11 @@
     \maketitle%
 }
 
-\section{Motivation}
-
-\frame{%
-    \centering
-    \includegraphics[width=.2\textwidth]{img/nut.png}\hspace{.1\textwidth}%
-    \includegraphics[width=.5\textwidth]{img/hammer.png}
-}
-
-\frame{%
-    \centering
-    \begin{figure}
-        \includegraphics[width=.8\textwidth]{img/gorilla.png}
-        \caption{%
-            via: BBC News (\url{%
-                https://www.bbc.co.uk/news/technology-33347866
-            })
-        }
-    \end{figure}
-}
-
-\frame{%
-    \alert{Reliability and frailty}
-    \begin{itemize}
-        \item[] \fullcite{Torralba2011}
-    \end{itemize}
-}
-
-% TODO
-% \frame{%
-%    Paradigm flip diagram
-% }
-
-\section{Generating artificial data}
-
-\frame{%
-    \centering
-    \begin{figure}
-        \includegraphics[width=.3\textwidth]{img/faces/0.jpeg}\hfill%
-        \includegraphics[width=.3\textwidth]{img/faces/1.jpeg}\hfill%
-        \includegraphics[width=.3\textwidth]{img/faces/2.jpeg}
-        \caption{via: \url{https://thispersondoesnotexist.com}}
-    \end{figure}
-}
-
-\frame{%
-    \begin{figure}
-        \includegraphics[width=\textwidth]{img/resume.png}
-        \caption{via: \url{https://thisresumedoesnotexist.com}}
-    \end{figure}
-}
-
-\frame{%
-    \begin{figure}
-        \includegraphics[width=.45\textwidth]{img/cats/0.jpeg}\hfill%
-        \includegraphics[width=.45\textwidth]{img/cats/1.jpeg}
-        \caption{via: \url{https://thiscatdoesnotexist.com}}
-    \end{figure}
-}
-
-\frame{%
-    \alert{Anscombe's quartet}\vfill
-    \includegraphics[width=\textwidth]{img/anscombes.pdf}\vfill
-}
-
-\frame{%
-    \alert{The Datasaurus dozen}\vfill
-    \includegraphics[width=\textwidth]{img/datasaurus.pdf}\vfill
-}
-
-% TODO
-% \frame{%
-%     Dataset similarity diagram
-% }
-
-\frame{%
-    \huge{%
-        Given an algorithm, how can one find data for which it performs well?
-    }
-}
-
-\section{Evolutionary algorithms}
-
-\frame{%
-    \resizebox{\textwidth}{!}{%
-        \input{tex/flowchart.tex}
-    }
-}
-
-\frame{%
-    \[
-        f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
-    \]
-
-    \begin{tabular}{lccccc}
-        \pause%
-        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\\\
-        \pause%
-        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\\\
-        \pause%
-        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\\\
-        \pause%
-        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\\\
-        \pause%
-        \alert{Mutate offspring} & & (\alert{15}, 30) & (25, \alert{26}) & & \\\\
-        \pause%
-        \alert{New generation} & (25, 30) & (15, 30) & (25, 26) & (20, 12) & (24, 25)
-    \end{tabular}
-}
-
-\frame{%
-    \tiny{%
-    \begin{itemize}
-        \item A fitness function, \(f\), which acts on a single dataset
-        \item A population size, \(N \in \mathbb{N}\)
-        \item Limits on the number of rows a dataset can have:
-            \[
-                R \in \left\{%
-                    (r_{\min}, r_{\max})
-                    \in \mathbb{N}^2~|~r_{\min} \leq r_{\max}
-                \right\}
-            \]
-        \item Limits on the number of columns a dataset can have:
-            \[
-                C := \left(C_1, \ldots, C_{|\mathcal{P}|}\right)
-                ~\text{where}~
-                C_j \in \left\{ (c_{\min}, c_{\max}) \in {%
-                    \left(\mathbb{N}\cup\{\infty\}\right)
-                }^2~|~c_{\min} \leq c_{\max}\right\}
-            \]
-            for each \(j = 1, \ldots, |\mathcal{P}|\)
-        \item A set of probability distribution families, \(\mathcal{P}\). Each
-            family in this set has some parameter limits which form a part of
-            the overall search space
-        \item A probability vector to sample distributions from \(\mathcal{P}\),
-            \(w = \left(w_1, \ldots, w_{|\mathcal{P}|}\right)\)
-        \item A maximum number of iterations, \(M \in \mathbb{N}\)
-        \item Two selection parameters: one to indicate the proportion of the
-            fittest individuals to carry forward, \(b \in [0, 1]\), and the
-            other to allow for a small proportion of ``lucky'' individuals,
-            \(l \in [0, 1]\)
-        \item A mutation probability, \(p_m \in [0, 1]\)
-        \item A shrink factor, \(s \in [0, 1]\). The relative size of a
-            component of the search space to be retained after adjustment
-    \end{itemize}
-    }
-}
-
-\frame{%
-    \alert{Individuals}\vfill
-    \resizebox{\textwidth}{!}{%
-        \input{tex/individual.tex}
-    }\vfill
-}
-
-\frame{%
-    \alert{Selection}\vfill
-    \resizebox{\textwidth}{!}{%
-        \input{tex/selection.tex}
-    }\vfill
-}
-
-\frame{%
-    \alert{Crossover}\vfill
-    \centering
-    \resizebox{!}{.65\paperheight}{%
-        \input{tex/crossover.tex}
-    }\vfill
-}
-
-\frame{%
-    \alert{Mutation}\vfill
-    \centering
-    \resizebox{!}{.75\paperheight}{%
-        \input{tex/mutation.tex}
-    }\vfill
-}
+\input{sections/intro.tex}
+\input{sections/algorithm.tex}
+\input{sections/examples.tex}
 
 
-\section{Some example use cases}
-
-\frame{%
-    \begin{algorithm}[H]\DontPrintSemicolon%
-        \KwIn{%
-            A dataset, \(X \in \mathbb{R}^n \times \mathbb{R}^n\);
-            \(
-                f: \mathbb{R}^n \times \mathbb{R}^n \to \mathbb{R},\quad
-                f(A, B) = Var(A) - \max_i \left|B_i - 1\right|
-            \)
-        }
-        \KwOut{The \alert{maximal} value for \(f\)}\;
-
-        \(values \gets \emptyset\)\;
-        \For{each ordering, \(a, b \in {\{0, 1\}}^2\), of the columns}{%
-            calculate \(f\left(X^{(a)}, X^{(b)}\right)\)\;
-            append this to \(values\)\;
-        }
-
-        \KwRet{\(\max values\)}
-    \end{algorithm}
-}
-
-\frame{%
-    \centering
-    \begin{figure}
-        \animategraphics[%
-            loop,controls,width=\textwidth%
-        ]{1}{img/circle/epoch_}{0}{100}
-    \end{figure}
-}
-
-\frame{%
-    \centering
-    \begin{figure}
-        \includegraphics[width=\textwidth]{img/circle/fitness.pdf}
-    \end{figure}
-}
-
-\frame{%
-    \begin{algorithm}[H]\DontPrintSemicolon%
-        \KwIn{%
-            A dataset, \(X \in \mathbb{R}^n\);
-            some sampling proportion, \(p \in [0, 1]\);
-            a number of samples to take, \(k\)
-        }
-        \KwOut{%
-            The maximum \alert{difference} between each sampled mean of \(X\)
-            and 0
-        }\;
-
-        \(values \gets \emptyset\)\;
-        \For{\(i = 1, \ldots, k\)}{%
-            \(Y \gets\) a random sample of \(\left\lfloor np \right\rfloor\)
-            entries from \(X\)\;
-            evaluate the mean of \(Y\):
-            \[
-                \bar Y = \frac{1}{|Y|} \sum_{i=1}^{|Y|} Y_i
-            \]
-            append \(\bar Y\) to \(values\)
-        }
-
-        \KwRet{\(\max values\)}
-    \end{algorithm}
-}
-
-\frame{%
-    \centering
-    \begin{tikzpicture}
-
-        \fill[cyan!15, rounded corners] (-1.5, 2.4) rectangle (1.5, 3)
-            node[right=40pt, below] {\color{cyan} Metadata};
-        \node at (0, 0) {%
-            \begin{tabular}{c}
-                \input{tex/meta.tex}\\
-                {}\\
-                \input{tex/best.tex}
-            \end{tabular}
-        };
-
-        \draw[decorate, decoration={brace, amplitude=10pt}, thick]%
-            (-2.5, -3) -- (-2.5, 3) node[midway, left=20pt] {\huge X};
-        \draw[decorate, decoration={brace, amplitude=10pt}, thick]%
-            (2.1, 2) -- (2.1, -3) node[midway, right=20pt] {Dataset};
-    \end{tikzpicture}
-}
-
-\frame{%
-    \includegraphics[width=\textwidth]{img/sample_mean.pdf}
-}
-
-\frame{%
-    \begin{algorithm}[H]\DontPrintSemicolon%
-        \KwIn{%
-            A dataset, \(X \in \mathbb{R}^n \times \mathbb{R}^n\);
-            a set of \alert{dissimilarity} measures, \(%
-                f_1, \ldots, f_k:
-                \mathbb{R}^n \times \mathbb{R}^n \to \mathbb{R}
-            \)
-        }
-        \KwOut{The total of the measures: \(\sum_{i=1}^k f_i(X)\)}\;
-
-        \(sum \gets 0\)\;
-        \For{\(i = 1, \ldots, k\)}{%
-            evaluate \(f_i(X)\)\;
-            add this to \(sum\)\;
-        }
-
-        \KwRet{\(sum\)}
-    \end{algorithm}
-}
-
-\frame{%
-    \centering{%
-        \(X\) Mean: 5 \hfill%
-        \(Y\) Mean: 7 \hfill%
-        \(X\) Std.: 4.7 \hfill%
-        \(Y\) Std.: 4.1 \hfill%
-        Corr.: 0.8
-    }\vfill
-
-    \begin{minipage}{\linewidth}
-        \hspace*{-30mm}
-        \includegraphics[height=.4\paperheight]{img/anscombe/best_0.pdf}%
-        \hspace*{-30mm}\includegraphics[height=.4\paperheight]{img/anscombe/best_1.pdf}
-    \end{minipage}
-    \begin{minipage}{\linewidth}
-        \hspace*{-30mm}
-        \includegraphics[height=.4\paperheight]{img/anscombe/best_2.pdf}%
-        \hspace*{-30mm}\includegraphics[height=.4\paperheight]{img/anscombe/best_3.pdf}
-    \end{minipage}
-}
-
-\frame{%
-    \begin{figure}
-        \includegraphics[width=\textwidth]{img/anscombe/fitness.pdf}
-    \end{figure}
-}
-
-\frame{%
-    \centering
-    \includegraphics[width=.2\textwidth]{img/nut.png}\hspace{.1\textwidth}%
-    \includegraphics[width=.5\textwidth]{img/hammer.png}
-}
 
 \frame{%
     \centering
