--- a/ons-edo/references.bib
+++ b/ons-edo/references.bib
@@ -1,7 +1,7 @@
-@misc{Torralba2011,
+@inproceedings{Torralba2011,
     author = {Torralba, A. and Efros, A. A.},
     title = {Unbiased Look at Dataset Bias},
-    howpublished = {Proceedings of the 2011 IEEE Conference on Computer Vision
+    booktitle = {Proceedings of the 2011 IEEE Conference on Computer Vision
                     and Pattern Recognition},
     year = {2011},
     pages = {1521--1528},
