Adjust spacing of GA example

--- a/ons-edo/sections/algorithm.tex
+++ b/ons-edo/sections/algorithm.tex
@@ -10,7 +10,7 @@
     \[
         \max\quad f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
     \]\vfill
-    \begin{tabular}{lccccc}
+    \hspace*{-5mm}\begin{tabular}{lccccc}
         \pause%
         \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\\\
         \pause%
