Add Hyndman reference.

--- a/ons-edo/references.bib
+++ b/ons-edo/references.bib
@@ -1,3 +1,10 @@
+@misc{Hyndman2014,
+    author = {Hyndman, R.},
+    title = {Prediction competitions},
+    year = {2014},
+    url = {https://robjhyndman.com/hyndsight/prediction-competitions/}
+}
+
 @inproceedings{Torralba2011,
     author = {Torralba, A. and Efros, A. A.},
     title = {Unbiased Look at Dataset Bias},
