--- a/ons-edo/sections/intro.tex
+++ b/ons-edo/sections/intro.tex
@@ -17,7 +17,8 @@
 \frame{%
     \alert{Reliability and frailty}
     \begin{itemize}
-        \item[] \fullcite{Torralba2011}
+        \item \fullcite{Hyndman2014}
+        \item \fullcite{Torralba2011}
     \end{itemize}
 }
 
@@ -65,34 +66,7 @@
 
 \frame{%
     \resizebox{\textwidth}{!}{%
-        \begin{tikzpicture}
-
-            \fill[gray!15] (-4, 5) rectangle (-2, 8.5);
-            \fill[cyan!35] (-2, 5) rectangle (0, 8.5);
-            \fill[magenta!5] (0, 5) rectangle (2, 8.5);
-            \path (-2, 5) pic {fullcolumn=10}
-                  (0, 5) pic {fullcolumn=10}
-                  (2, 5) pic {fullcolumn=10};
-            \node (dataset) at (-1, 4.5) {};
-
-            \fill[pattern=north west lines, pattern color=cyan!35]
-                (6, 0) rectangle (8, 3.15);
-            \fill[pattern=north east lines, pattern color=magenta!50]
-                (8, 0) rectangle (10, 3.15);
-            \fill[pattern=north west lines, pattern color=gray!50]
-                (10, 0) rectangle (12, 3.15);
-            \path (8, 0) pic {fullcolumn=9}
-                  (10, 0) pic {fullcolumn=9}
-                  (12, 0) pic {fullcolumn=9};
-            \node (similar) at (5.5, 2) {};
-
-            \draw[->, orange, ultra thick]
-                (dataset.south) to [out=290, in=180] (similar.west);
-            \draw[->, orange, ultra thick]
-                (7, 3.5) to [out=100, in=0] (2.5, 6)
-                node[right=20pt, below=50pt]
-                {\Large\color{orange} make `similar'};
-        \end{tikzpicture}
+        \input{tex/similar.tex}
     }
 }
 
