Start writing flipped paradigm diagram

--- a/ons-edo/sections/intro.tex
+++ b/ons-edo/sections/intro.tex
@@ -27,6 +27,13 @@
 %    Paradigm flip diagram
 % }
 
+\frame{%
+    \centering
+    \resizebox{!}{.9\paperheight}{%
+        \input{tex/flip.tex}
+    }
+}
+
 \section{Generating artificial data}
 
 \frame{%
