--- a/ons-edo/tex/similar.tex
+++ b/ons-edo/tex/similar.tex
@@ -10,6 +10,7 @@
     \node (dataset) at (-1, 4.5) {};
 
     % A similar dataset
+    \pause%
     \fill[pattern=north west lines, pattern color=cyan!35]
         (6, 0) rectangle (8, 3.15);
     \fill[pattern=north east lines, pattern color=magenta!50]
@@ -21,10 +22,11 @@
         (12, 0) pic {fullcolumn=9};
     \node (similar) at (5.5, 2) {};
 
+    \pause%
+    \draw[orange, ultra thick, rounded corners]
+        (-4.5, 4.4) rectangle (2.5, 9.2);
     \draw[->, orange, ultra thick]
-        (dataset.south) to [out=290, in=180] (similar.west);
-    \draw[->, orange, ultra thick]
-        (7, 3.5) to [out=100, in=0] (2.5, 6) node[right=20pt, below=50pt]
-        {\Large\color{orange} make `similar'};
+        (dataset.south) to [out=290, in=180] (similar.west)
+        node[midway, above=10pt] {\Large\color{orange} make `similar'};
 
 \end{tikzpicture}
