Start adjusting for VK,GP,NG comments

--- a/ons-edo/sections/intro.tex
+++ b/ons-edo/sections/intro.tex
@@ -1,5 +1,3 @@
-\section{Motivation}
-
 \hammerpage%
 
 \frame{%
@@ -21,11 +19,6 @@
         \item \fullcite{Torralba2011}
     \end{itemize}
 }
-
-% TODO
-% \frame{%
-%    Paradigm flip diagram
-% }
 
 \frame{%
     \centering
@@ -68,7 +61,10 @@
 
 \frame{%
     \alert{The Datasaurus dozen}\vfill
-    \includegraphics[width=\textwidth]{img/datasaurus.pdf}\vfill
+    \begin{figure}
+        \includegraphics[width=\textwidth]{img/datasaurus.pdf}
+        \caption{Original paper by @JustinMatejka}
+    \end{figure}\vfill
 }
 
 \frame{%
@@ -79,7 +75,8 @@
 
 \frame{%
     \huge{%
-        Given an algorithm, how can one find data for which it performs well?
+        Given an algorithm, how can one find sets of data for which it performs
+        well?
     }
 }
 
