--- a/ons-edo/main.tex
+++ b/ons-edo/main.tex
@@ -11,6 +11,7 @@
     \addbibresource{references}
 \usepackage{booktabs}
 \usepackage[font=footnotesize,labelformat=empty]{caption}
+\usepackage{colortbl}
 \usepackage[default]{Fira Sans}
 \usepackage{graphicx}
 \usepackage{hyperref}
@@ -28,6 +29,12 @@
 % TikZ styles, commands and settings
 \definecolor{cyan}{RGB}{0, 164, 216}
 \definecolor{magenta}{RGB}{226, 62, 138}
+
+\newcommand{\rcg}{\rowcolor{gray!15}}
+
+\pgfdeclarelayer{background}
+\pgfsetlayers{background,main}
+
 \tikzstyle{every picture} += [remember picture]
 \tikzstyle{na} = [baseline=-.5ex]
 
@@ -64,6 +71,8 @@
         \includegraphics[width=.5\textwidth]{img/hammer.png}
     }
 }
+
+\renewcommand{\arraystretch}{1.5}
 
 \title{%
     Evolutionary dataset optimisation:
@@ -114,6 +123,47 @@
                 quality through evolution''
             }
         \end{itemize}
+}
+
+\frame{%
+    \tiny{%
+    \begin{itemize}
+        \item A fitness function, \(f\), which acts on a single dataset
+        \item A population size, \(N \in \mathbb{N}\)
+        \item A maximum number of iterations, \(M \in \mathbb{N}\)
+        \item A selection parameter to detail the proportion of the
+            fittest individuals to carry forward, \(b \in [0, 1]\)
+        \item A mutation probability, \(p_m \in [0, 1]\)
+    \end{itemize}
+    \vspace{-10pt}\noindent\rule{\linewidth}{0.4pt}\vspace{-10pt}
+    \begin{itemize}
+        \item Limits on the number of rows a dataset can have:
+            \[
+                R \in \left\{%
+                    (r_{\min}, r_{\max})
+                    \in \mathbb{N}^2~|~r_{\min} \leq r_{\max}
+                \right\}
+            \]
+        \item Limits on the number of columns a dataset can have:
+            \[
+                C := \left(C_1, \ldots, C_{|\mathcal{P}|}\right)
+                ~\text{where}~
+                C_j \in \left\{ (c_{\min}, c_{\max}) \in {%
+                    \left(\mathbb{N}\cup\{\infty\}\right)
+                }^2~|~c_{\min} \leq c_{\max}\right\}
+            \]
+            for each \(j = 1, \ldots, |\mathcal{P}|\)
+        \item A set of probability distribution families, \(\mathcal{P}\). Each
+            family in this set has some parameter limits which form a part of
+            the overall search space
+        \item A probability vector to sample distributions from \(\mathcal{P}\),
+            \(w = \left(w_1, \ldots, w_{|\mathcal{P}|}\right)\)
+        \item A second selection parameter, \(l \in [0, 1]\), to allow for a
+            small proportion of ``lucky'' individuals to be carried forward
+        \item A shrink factor, \(s \in [0, 1]\). The relative size of a
+            component of the search space to be retained after adjustment
+    \end{itemize}
+    }
 }
 
 \end{document}
