--- a/ons-edo/sections/algorithm.tex
+++ b/ons-edo/sections/algorithm.tex
@@ -12,70 +12,57 @@
     \]\vfill
     \hspace*{-5mm}\begin{tabular}{lccccc}
         \pause%
-        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\\\
+        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\
         \pause%
-        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\\\
+        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\
         \pause%
-        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\\\
+        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\
         \pause%
-        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\\\
+        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\
         \pause%
-        \alert{Mutate offspring} & & (\alert{15}, 30) & (25, \alert{26}) & & \\\\
+        \alert{Mutate offspring} & & (24, 30) & (25, \alert{13}) & & \\
         \pause%
-        \alert{New generation} & (25, 30) & (15, 30) & (25, 26) & (20, 12) & (24, 25)
+        \alert{New generation} & (25, 30) & (24, 30) & (25, 13) & (20, 12) & (24, 25)
     \end{tabular}
 }
 
 \frame{%
-    \tiny{%
-    \begin{itemize}
-        \item A fitness function, \(f\), which acts on a single dataset
-        \item A population size, \(N \in \mathbb{N}\)
-        \item A maximum number of iterations, \(M \in \mathbb{N}\)
-        \item A selection parameter to detail the proportion of the
-            fittest individuals to carry forward, \(b \in [0, 1]\)
-        \item A mutation probability, \(p_m \in [0, 1]\)
-    \end{itemize}
-    \vspace{-10pt}\noindent\rule{\linewidth}{0.4pt}\vspace{-10pt}
-    \begin{itemize}
-        \item Limits on the number of rows a dataset can have:
-            \[
-                R \in \left\{%
-                    (r_{\min}, r_{\max})
-                    \in \mathbb{N}^2~|~r_{\min} \leq r_{\max}
-                \right\}
-            \]
-        \item Limits on the number of columns a dataset can have:
-            \[
-                C := \left(C_1, \ldots, C_{|\mathcal{P}|}\right)
-                ~\text{where}~
-                C_j \in \left\{ (c_{\min}, c_{\max}) \in {%
-                    \left(\mathbb{N}\cup\{\infty\}\right)
-                }^2~|~c_{\min} \leq c_{\max}\right\}
-            \]
-            for each \(j = 1, \ldots, |\mathcal{P}|\)
-        \item A set of probability distribution families, \(\mathcal{P}\). Each
-            family in this set has some parameter limits which form a part of
-            the overall search space
-        \item A probability vector to sample distributions from \(\mathcal{P}\),
-            \(w = \left(w_1, \ldots, w_{|\mathcal{P}|}\right)\)
-        \item A second selection parameter, \(l \in [0, 1]\), to allow for a
-            small proportion of ``lucky'' individuals to be carried forward
-        \item A shrink factor, \(s \in [0, 1]\). The relative size of a
-            component of the search space to be retained after adjustment
-    \end{itemize}
-    }
+    \[
+        \max\quad f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
+    \]\vfill
+    \hspace*{-5mm}\begin{tabular}{lccccc}
+        \rcg\alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\
+        \rcg\alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\
+        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\
+        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\
+        \alert{Mutate offspring} & & (24, 30) & (25, \alert{13}) & & \\
+        \alert{New generation} & (25, 30) & (24, 30) & (25, 13) & (20, 12) & (24, 25)
+    \end{tabular}
 }
 
 \frame{%
-    \vfill\alert{Individuals}\vfill
+    \vfill
     \resizebox{\textwidth}{!}{%
         \input{tex/individual.tex}
     }\vfill
 }
 
 \frame{%
-    \vfill\alert{Selection}\vfill
+    \[
+        \max\quad f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
+    \]\vfill
+    \hspace*{-5mm}\begin{tabular}{lccccc}
+        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\
+        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\
+        \rcg\alert{Select parents} & (25, 30) &  &  & (20, 12) & (24, 25)\\
+        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\
+        \alert{Mutate offspring} & & (24, 30) & (25, \alert{13}) & & \\
+        \alert{New generation} & (25, 30) & (24, 30) & (25, 13) & (20, 12) & (24, 25)
+    \end{tabular}
+}
+
+\frame{%
+    \vfill
     \centering
     \resizebox{!}{.75\paperheight}{%
         \input{tex/selection.tex}
@@ -83,7 +70,21 @@
 }
 
 \frame{%
-    \vfill\alert{Crossover}\vfill
+    \[
+        \max\quad f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
+    \]\vfill
+    \hspace*{-5mm}\begin{tabular}{lccccc}
+        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\
+        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\
+        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\
+        \rcg\alert{Create offspring} & {} & (24, 30) & (25, 12) & {} & {}\\
+        \alert{Mutate offspring} & {} & (24, 30) & (25, \alert{13}) & {} & {}\\
+        \alert{New generation} & (25, 30) & (24, 30) & (25, 13) & (20, 12) & (24, 25)
+    \end{tabular}
+}
+
+\frame{%
+    \vfill
     \centering
     \resizebox{!}{.65\paperheight}{%
         \input{tex/crossover.tex}
@@ -91,7 +92,21 @@
 }
 
 \frame{%
-    \vfill\alert{Mutation}\vfill
+    \[
+        \max\quad f: \mathbb{N}^2 \to \mathbb{N}; \qquad f(x_1, x_2) = x_1 + x_2
+    \]\vfill
+    \hspace*{-5mm}\begin{tabular}{lccccc}
+        \alert{Population} & (25, 30) & (12, 1) & (11, 0) & (20, 12) & (24, 25)\\
+        \alert{Get fitness} & 55 & 13 & 11 & 42 & 49\\
+        \alert{Select parents} & (25, 30) & {} & {} & (20, 12) & (24, 25)\\
+        \alert{Create offspring} & & (24, 30) & (25, 12) & & \\
+        \rcg\alert{Mutate offspring} & {} & (24, 30) & (25, \alert{13}) & {} & {}\\
+        \rcg\alert{New generation} & (25, 30) & (24, 30) & (25, 13) & (20, 12) & (24, 25)
+    \end{tabular}
+}
+
+\frame{%
+    \vfill
     \centering
     \resizebox{!}{.75\paperheight}{%
         \input{tex/mutation.tex}
