Remove words from operator diagrams

--- a/ons-edo/sections/algorithm.tex
+++ b/ons-edo/sections/algorithm.tex
@@ -42,7 +42,8 @@
 
 \frame{%
     \vfill
-    \resizebox{\textwidth}{!}{%
+    \centering
+    \resizebox{!}{.9\paperheight}{%
         \input{tex/individual.tex}
     }\vfill
 }
@@ -64,7 +65,7 @@
 \frame{%
     \vfill
     \centering
-    \resizebox{!}{.75\paperheight}{%
+    \resizebox{!}{.9\paperheight}{%
         \input{tex/selection.tex}
     }\vfill
 }
@@ -86,7 +87,7 @@
 \frame{%
     \vfill
     \centering
-    \resizebox{!}{.65\paperheight}{%
+    \resizebox{!}{.9\paperheight}{%
         \input{tex/crossover.tex}
     }\vfill
 }
@@ -108,7 +109,7 @@
 \frame{%
     \vfill
     \centering
-    \resizebox{!}{.75\paperheight}{%
+    \resizebox{!}{.9\paperheight}{%
         \input{tex/mutation.tex}
     }\vfill
 }
