--- a/ons-edo/tex/individual.tex
+++ b/ons-edo/tex/individual.tex
@@ -8,14 +8,6 @@
     \node at (-1.85, -7.75) {\huge \(+\)};
     \node at (1.85, -7.75) {\huge \(+\)};
 
-    \draw[decorate, decoration={brace, amplitude=10pt}] (-6, -10) -- (-6, -6)
-    node[midway, left=20pt] {%
-        \begin{tabular}{l}
-            Columns of\\
-            the dataset
-        \end{tabular}
-    };
-
     % Distribution families
     \node[ellipse, fill=orange!15] (dists) at (0, -1) {\Large%
         \begin{tabular}{c}
@@ -27,14 +19,7 @@
             \\
             {} \quad \(Po(\lambda)\)
         \end{tabular}
-    } node[yshift=-30pt,left=150pt] {%
-        \color{orange}
-        \begin{tabular}{l}
-            Families of\\
-            distributions
-        \end{tabular}
     };
-
 
     % Metadata
     \node[fill=cyan!15, minimum width=3cm, rounded corners] (metadata) at
@@ -47,15 +32,8 @@
             \quad
             \tikz[baseline, inner sep=0] \node[anchor=base] (norm2)
                 {\(N(-3.7, 0)\)};
-        } node[yshift=-110pt,left=180pt] {%
-            \color{cyan}
-            \begin{tabular}{l}
-                Column\\
-                information
-            \end{tabular}
         };
-
-
+ 
     % Connecting family to metadata
     \draw[->] ([xshift=-5pt] normal.south)
         to [out=250, in=90] ([yshift=20pt] norm1);
@@ -63,27 +41,11 @@
     \draw[->] (uniform) to [out=270, in=90] ([yshift=20pt] uniform1);
 
     \draw[->] ([xshift=5pt] normal.south)
-        to [out=270, in=90] ([yshift=20pt] norm2)
-        node[right=20pt, yshift=30pt] {%
-            \color{gray}
-            \begin{tabular}{l}
-                Sample distribution\\
-                and parameters
-            \end{tabular}
-        };
+        to [out=270, in=90] ([yshift=20pt] norm2);
 
     % Connecting metadata to columns
     \draw[->] ([yshift=-10pt] norm1.south) -- ++(0, -1);
-
     \draw[->] ([yshift=-10pt] uniform1.south) -- ++(0, -1);
-
-    \draw[->] ([yshift=-10pt] norm2.south) -- ++(0, -1)
-        node[right=20pt, yshift=15pt] {%
-            \color{gray}
-            \begin{tabular}{l}
-                Sample values\\
-                from distribution
-            \end{tabular}
-        };
+    \draw[->] ([yshift=-10pt] norm2.south) -- ++(0, -1);
 
 \end{tikzpicture}
