Update outro slide

--- a/ons-edo/main.tex
+++ b/ons-edo/main.tex
@@ -102,7 +102,7 @@
 
 \frame{%
     \centering
-    \Huge{\texttt{\$ pip install edo}}
+    \Huge{\href{https://edo.readthedocs.io}{\nolinkurl{edo.readthedocs.io}}}
 }
 
 \frame{%
@@ -110,10 +110,12 @@
         \begin{itemize}
             \item[] \alert{Twitter:} @daffidwilde
             \item[] \alert{Email:} wildehd@cardiff.ac.uk
-            \item[] \alert{Repository:} \url{%
-                https://github.com/daffidwilde/edo
-            }
-            \item[] \alert{Documentation:} \url{https://edo.readthedocs.io}\\
+            \item[] \alert{Repository:}
+                \href{https://github.com/daffidwilde/edo}{%
+                    \nolinkurl{github.com/daffidwilde/edo}
+                }
+            \item[] \alert{Documentation:}
+                \href{https://edo.readthedocs.io}{\nolinkurl{edo.readthedocs.io}}\\
         \end{itemize}
 
     Paper in preparation:
