Finalise changes from comments.

--- a/ons-edo/sections/algorithm.tex
+++ b/ons-edo/sections/algorithm.tex
@@ -1,8 +1,10 @@
 \section{Evolutionary algorithms}
 
 \frame{%
-    \resizebox{\textwidth}{!}{%
-        \input{tex/flowchart.tex}
+    \makebox[\linewidth]{%
+        \resizebox{!}{.85\paperheight}{%
+            \input{tex/flowchart.tex}
+        }
     }
 }
 
