--- a/ons-edo/sections/intro.tex
+++ b/ons-edo/sections/intro.tex
@@ -13,10 +13,14 @@
 }
 
 \frame{%
-    \alert{Reliability and frailty}
+    \alert{Reliability}
     \begin{itemize}
-        \item \fullcite{Hyndman2014}
-        \item \fullcite{Torralba2011}
+        \item[] \fullcite{Hyndman2014}
+    \end{itemize}
+
+    \alert{Frailty}
+    \begin{itemize}
+        \item[] \fullcite{Torralba2011}
     \end{itemize}
 }
 
