Make CTHB logo transparent

--- a/ons-edo/main.tex
+++ b/ons-edo/main.tex
@@ -84,7 +84,7 @@
     \centering%
     \includegraphics[height=.2\paperheight]{img/cu_logo.png}%
     \hspace{5pt}%
-    \includegraphics[height=.2\paperheight]{img/cthb_logo.jpg}
+    \includegraphics[height=.2\paperheight]{img/cthb_logo.png}
 }
 \date{}
 
