Add structure to pyw talk.

--- a/pyw-parallelisation/main.ipynb
+++ b/pyw-parallelisation/main.ipynb
@@ -13,20 +13,16 @@
     "<i class='fa fa-twitter' aria-hidden='false'></i> @daffidwilde </font>\n",
     "<hr>\n",
     "\n",
-    "## Classically used for:\n",
+    "# Classically used for:\n",
     "\n",
-    "- speeding up the repetition of a given task\n",
-    "- running trials for an experiment with various parameters\n",
-    "\n",
-    "<img src=\"simple.pdf\" width=\"700\">\n",
+    "<br>\n",
+    "<img src=\"img/simple.pdf\" width=\"700\">\n",
     "<br><br>\n",
     "\n",
-    "## Can be used for:\n",
+    "# Can be used for:\n",
     "\n",
-    "- breaking up and executing any set of independent tasks\n",
-    "- handling (unreasonably) large objects\n",
-    "\n",
-    "<img src=\"complex.pdf\" width=\"800\">\n",
+    "<br>\n",
+    "<img src=\"img/complex.pdf\" width=\"800\">\n",
     "<br><br>\n",
     "\n",
     "---\n",
@@ -74,9 +70,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run_simulation(2, 0)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -97,7 +91,7 @@
     "import itertools\n",
     "\n",
     "numbers_of_servers = [1, 2, 3]\n",
-    "trials = range(100)\n"
+    "trials = range(100)"
    ]
   },
   {
@@ -108,9 +102,18 @@
    "source": [
     "%%time\n",
     "results = defaultdict(list)\n",
-    "for servers, seed in itertools.product(numbers_of_servers, trials):\n",
-    "    result = run_simulation(servers, seed)\n",
-    "    results[servers].append(result)"
+    "for servers, trial in itertools.product(numbers_of_servers, trials):\n",
+    "    servers, time = run_simulation(servers, trial)\n",
+    "    results[servers].append(time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
@@ -121,7 +124,7 @@
     "\n",
     "# First principles (queues, queues, queues)\n",
     "\n",
-    "![In and out trays](punch-in-out.jpg)\n",
+    "![In and out trays](img/punch-in-out.jpg)\n",
     "Image via: Punch magazine"
    ]
   },
@@ -214,8 +217,16 @@
     "\n",
     "numbers_of_servers = [1, 2, 3]\n",
     "trials = range(100)\n",
-    "workers = mp.cpu_count()\n",
-    "workers\n"
+    "workers = mp.cpu_count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workers"
    ]
   },
   {
@@ -320,7 +331,6 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
     "results = run_with_starmap(args)"
    ]
   },
@@ -330,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results\n"
+    "results"
    ]
   },
   {
@@ -340,7 +350,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(results)\n",
-    "df.describe()\n"
+    "df.describe()"
    ]
   },
   {
@@ -492,7 +502,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "![Dask anatomy](collections-schedulers.png)\n",
+    "![Dask anatomy](img/collections-schedulers.png)\n",
     "\n",
     "<br>\n",
     "\n",
