Finish Gregynog slides.

--- a/edo/gregynog/main.tex
+++ b/edo/gregynog/main.tex
@@ -94,9 +94,11 @@
     \maketitle%
 }
 
+\hammerpage%
 \input{sections/intro.tex}
 \input{sections/algorithm.tex}
 \input{sections/examples.tex}
+\hammerpage%
 
 \frame{%
     Henry Wilde
@@ -118,6 +120,18 @@
                 quality through evolution''
             }
         \end{itemize}
+}
+
+\frame{%
+    \alert{Reliability}
+    \begin{itemize}
+        \item[] \fullcite{Hyndman2014}
+    \end{itemize}
+
+    \alert{Frailty}
+    \begin{itemize}
+        \item[] \fullcite{Torralba2011}
+    \end{itemize}
 }
 
 \frame{%
