--- a/pgr-panel/main.tex
+++ b/pgr-panel/main.tex
@@ -6,12 +6,12 @@
 \usetheme{metropolis}
 \setbeamertemplate{footline}{}
 
-\title{Public engagement and outreach}
-\author{Henry Wilde}
+\title{Intro to PGR Studies Q{\&}A:\\Public engagement and outreach}
+\author{}
 \institute{%
     \vfill%
     \centering%
-    \includegraphics[height=.2\paperheight]{./../edo/img/cu_logo.png}%
+    \includegraphics[width=.8\textwidth]{soapbox.png}%
 }
 \date{}
 
@@ -48,6 +48,30 @@
                 }
             \end{itemize}
         \item[] Discussion groups
+    \end{itemize}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Academic outreach}
+    \begin{itemize}
+        \item[] STEMLive!
+            \begin{itemize}
+                \item annual, two-day event run by the university
+                \item interactive activities with school children themed around
+                    space exploration
+                \item paid volunteering
+            \end{itemize}
+        \item[] Monmouth Science Initiative
+            \begin{itemize}
+                \item semi-regular school-based events for gifted students in
+                    the South Wales region
+            \end{itemize}
+        \item[] Nuffield Research Placements
+            \begin{itemize}
+                \item extended project with a student from a low-income
+                    background
+                \item fantastic mentoring potential
+            \end{itemize}
     \end{itemize}
 \end{frame}
 
